fix(billing): safely handle array response structures in UpgradeRequestCard to avoid requests.find crash